--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'arm-profiles to clone'
     required: false
     default: 'https://gitlab.manjaro.org/manjaro-arm/applications/arm-profiles'
+  device:
+    description: 'name of the device the build is for'
+    required: true
   edition:
     description: 'name of the profile to build'
     required: true
@@ -121,6 +124,7 @@ runs:
         id: build
         shell: bash
         env:
+          DEVICE: ${{ inputs.device }}
           EDITION: ${{ inputs.edition }}
           BRANCH: ${{ inputs.branch }}
           VERSION: ${{ inputs.version }}
