add github token as variable
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,7 @@ runs:
       shell: bash
       env:
         PACMAN_VERSION: 5.2.2
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         # Install build dependencies
         sudo apt-get update
