remove gpg stuff entirely and add torrent as output
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -24,11 +24,14 @@ outputs:
     description: "compressed files"
     value: ${{ steps.build.outputs.file-pkg }}
   file-path:
-    description: "path of the generated iso"
+    description: "path of the generated image"
     value: ${{ steps.build.outputs.file-path }}
   file-sha256:
-    description: "checksum file for the iso"
+    description: "checksum file for the image"
     value: ${{ steps.build.outputs.file-sha256 }}
+  file-torrent:
+    description: "torrent file for the image"
+    value: ${{ steps.build.outputs.file-torrent }}
 runs:
   using: "composite"
   steps:
@@ -142,37 +145,6 @@ runs:
           echo "::set-output name=file-sha1::$(basename $FILE_PATH).sha1"
           mktorrent -v -a udp://tracker.opentrackr.org:1337 -l 21 -w https://github.com/$GITHUB_REPOSITORY/releases/download/$VERSION/$(basename $FILE_PATH) -o $(basename $FILE_PATH).torrent $(basename $FILE_PATH)
           echo "::set-output name=file-torrent::$(basename $FILE_PATH).torrent"
-          
-          # Do GPG signing
-          # echo "setup values"
-          # GPG_HOMEDIR="$(mktemp -d -t gnupg.XXX)"
-          # SECRET_KEY_FILE="$GPG_HOMEDIR/secret.key"
-          # PUBLIC_KEY_FILE="$GPG_HOMEDIR/public_key.gpg"
-          # PASSPHRASE_FILE="$GPG_HOMEDIR/passphrase.file"
-          # GPG="gpg --homedir=$GPG_HOMEDIR --no-tty --batch --yes"
-          
-          # echo "unpack public key"
-          # echo "${{ secrets.CI_PUB_KEY }}" | base64 --decode > "$PUBLIC_KEY_FILE"
-          # echo "unpack secret key"
-          # echo "${{ secrets.CI_GPG_SECRET }}" | base64 --decode > "$SECRET_KEY_FILE"
-          
-          # echo "passphrase"
-          # echo "${{ secrets.CI_GPG_PASSPHRASE }}" > "$PASSPHRASE_FILE"
-          
-          # echo "Secrets unpacked..."
-          # paperkey --pubring "$PUBLIC_KEY_FILE" --secrets "$SECRET_KEY_FILE" \
-          # | $GPG --import &>/dev/null
-          # $GPG --pinentry-mode loopback --detach-sign --use-agent -u "${{ secrets.CI_GPG_KEY }}" --passphrase-file "$PASSPHRASE_FILE" $(basename $FILE_PATH)
-          # ls -lasih
-          # echo "::set-output name=file-signature::$(basename $FILE_PATH).sig"
-          
-          # echo "Verifying file"
-          # $GPG --verify $(basename $FILE_PATH).sig $(basename $FILE_PATH)
-          
-          # echo "cleaning up"
-          # find "$GPG_HOMEDIR" -type f -exec shred {} \;
-          # rm -rf "$GPG_HOMEDIR"
-          # echo "script done"
           
           # Copy filepaths
           echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
