disable gpg stuff again
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -19,15 +19,15 @@ inputs:
     description: 'image version'
     required: false
     default: "YY.MM"
-  CI_PUB_KEY:
-    description: 'public gpg key to use'
-    required: true
-  CI_GPG_SECRET: 
-    description: 'private key to use'
-    required: true
-  CI_GPG_PASSPHRASE: 
-    description: 'passphrase for private key'
-    required: true
+#  CI_PUB_KEY:
+#    description: 'public gpg key to use'
+#    required: true
+#  CI_GPG_SECRET: 
+#    description: 'private key to use'
+#    required: true
+#  CI_GPG_PASSPHRASE: 
+#    description: 'passphrase for private key'
+#    required: true
 outputs:
   file-pkg:
     description: "compressed files"
@@ -155,9 +155,9 @@ runs:
         EDITION: ${{ inputs.edition }}
         BRANCH: ${{ inputs.branch }}
         VERSION: ${{ inputs.version }}
-        CI_PUB_KEY: ${{ inputs.CI_PUB_KEY }}
-        CI_GPG_SECRET: ${{ inputs.CI_GPG_SECRET }}
-        CI_GPG_PASSPHRASE: ${{ inputs.CI_GPG_PASSPHRASE }}
+        #CI_PUB_KEY: ${{ inputs.CI_PUB_KEY }}
+        #CI_GPG_SECRET: ${{ inputs.CI_GPG_SECRET }}
+        #CI_GPG_PASSPHRASE: ${{ inputs.CI_GPG_PASSPHRASE }}
       run: |
         sudo mv -v $GITHUB_WORKSPACE/arm-profiles /usr/share/manjaro-arm-tools/profiles
         sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH
@@ -174,45 +174,45 @@ runs:
         echo "::set-output name=file-torrent::$(basename $FILE_PATH).torrent"
         
         # Do GPG signing
-        echo "setup values"
-        GPG_HOMEDIR="$(mktemp -d -t gnupg.XXX)"
-        SECRET_KEY_FILE="$GPG_HOMEDIR/secret.key"
-        PUBLIC_KEY_FILE="$GPG_HOMEDIR/public_key.gpg"
-        PASSPHRASE_FILE="$GPG_HOMEDIR/passphrase.file"
-        GPG="gpg --homedir=$GPG_HOMEDIR --no-tty --batch --yes"
+        #echo "setup values"
+        #GPG_HOMEDIR="$(mktemp -d -t gnupg.XXX)"
+        #SECRET_KEY_FILE="$GPG_HOMEDIR/secret.key"
+        #PUBLIC_KEY_FILE="$GPG_HOMEDIR/public_key.gpg"
+        #PASSPHRASE_FILE="$GPG_HOMEDIR/passphrase.file"
+        #GPG="gpg --homedir=$GPG_HOMEDIR --no-tty --batch --yes"
           
-        echo "unpack public key"
-        echo "$CI_PUB_KEY" | base64 --decode > "$PUBLIC_KEY_FILE"
+        #echo "unpack public key"
+        #echo "$CI_PUB_KEY" | base64 --decode > "$PUBLIC_KEY_FILE"
 
-        echo "unpack secret key"
-        echo "$CI_GPG_SECRET" | base64 --decode > "$SECRET_KEY_FILE"
+        #echo "unpack secret key"
+        #echo "$CI_GPG_SECRET" | base64 --decode > "$SECRET_KEY_FILE"
           
-        echo "passphrase"
-        echo "$CI_GPG_PASSPHRASE" > "$PASSPHRASE_FILE"
+        #echo "passphrase"
+        #echo "$CI_GPG_PASSPHRASE" > "$PASSPHRASE_FILE"
           
-        echo "Secrets unpacked..."
+        #echo "Secrets unpacked..."
 
-        paperkey --pubring "$PUBLIC_KEY_FILE" --secrets "$SECRET_KEY_FILE" \
-        | $GPG --import &>/dev/null
+        #paperkey --pubring "$PUBLIC_KEY_FILE" --secrets "$SECRET_KEY_FILE" \
+        #| $GPG --import &>/dev/null
 
-        $GPG --pinentry-mode loopback --detach-sign --use-agent -u "$CI_GPG_KEY" --passphrase-file "$PASSPHRASE_FILE" $(basename $FILE_PATH)
+        #$GPG --pinentry-mode loopback --detach-sign --use-agent -u "$CI_GPG_KEY" --passphrase-file "$PASSPHRASE_FILE" $(basename $FILE_PATH)
 
-        ls -lasih
+        #ls -lasih
           
-        echo "Verifying file"
-        $GPG --verify $(basename $FILE_PATH).sig $(basename $FILE_PATH)
-        echo "::set-output name=file-signature::$(basename $FILE_PATH).sig"
+        #echo "Verifying file"
+        #$GPG --verify $(basename $FILE_PATH).sig $(basename $FILE_PATH)
+        #echo "::set-output name=file-signature::$(basename $FILE_PATH).sig"
           
-        echo "cleaning up"
-        find "$GPG_HOMEDIR" -type f -exec shred {} \;
-        rm -rf "$GPG_HOMEDIR"
-        echo "script done"
+        #echo "cleaning up"
+        #find "$GPG_HOMEDIR" -type f -exec shred {} \;
+        #rm -rf "$GPG_HOMEDIR"
+        #echo "script done"
           
         # Copy filepaths
         echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
         echo "FILE_SHA1=$(basename $FILE_PATH).sha1" >> $GITHUB_ENV
         echo "FILE_TORRENT=$(basename $FILE_PATH).torrent" >> $GITHUB_ENV
-        echo "FILE_SIG=$(basename $FILE_PATH).sig" >> $GITHUB_ENV
+        #echo "FILE_SIG=$(basename $FILE_PATH).sig" >> $GITHUB_ENV
           
         FILE_PKG=$(find /var/cache/manjaro-arm-tools/img -type f -name "*-pkgs.txt" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
         cp -v $FILE_PKG .
