add ca-certificates to build dependencies
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -78,6 +78,7 @@ runs:
           mktorrent \
           paperkey \
           gpg \
+          ca-certificates \
           u-boot-tools
           
     -
