install meson and ninja via pip3 for pacman build
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/action.yml
+++ b/action.yml
@@ -80,8 +80,9 @@ runs:
           gpg \
           ca-certificates \
           u-boot-tools
+        sudo pip3 install meson
+        sudo pip3 install ninja
           
-    -
     - id: install-pacman
       shell: bash
       env:
