--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
   overlay-repo:
     description: 'custom overlay repo'
     required: false
+  factory:
+    description: 'factory image'
+    required: false
+    default: no
 #  CI_PUB_KEY:
 #    description: 'public gpg key to use'
 #    required: true
@@ -163,15 +167,17 @@ runs:
         EDITION: ${{ inputs.edition }}
         BRANCH: ${{ inputs.branch }}
         VERSION: ${{ inputs.version }}
+        FACTORY: ${{ inputs.factory }}
         #CI_PUB_KEY: ${{ inputs.CI_PUB_KEY }}
         #CI_GPG_SECRET: ${{ inputs.CI_GPG_SECRET }}
         #CI_GPG_PASSPHRASE: ${{ inputs.CI_GPG_PASSPHRASE }}
       run: |
+        [ "$FACTORY" != "yes" ] && unset FACTORY
         sudo mv -v $GITHUB_WORKSPACE/arm-profiles /usr/share/manjaro-arm-tools/profiles
         if [ -z ${{ inputs.overlay-repo }} ]; then 
-          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH
+          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH ${FACTORY:+-f}
         else
-          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH -k ${{ inputs.overlay-repo }}
+          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH -k ${{ inputs.overlay-repo }} ${FACTORY:+-f}
         fi
           
         ls -lasih /var/cache/manjaro-arm-tools/img
