[docker] run script with sudo
Signed-off-by: Dan Johansen <strit@manjaro.org>

--- a/.github/workflows/aarch64_base_stable_docker_build.yaml
+++ b/.github/workflows/aarch64_base_stable_docker_build.yaml
@@ -169,5 +169,5 @@ jobs:
             docker image tag $DOCKER_IMAGE_NAME:latest manjaroarm/$DOCKER_IMAGE_NAME:latest
             docker push manjaroarm/$DOCKER_IMAGE_NAME:latest
           }
-          create_rootfs
-          compress_docker
+          sudo create_rootfs
+          sudo compress_docker
